Ajusting the header and some text

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <title>Eros Koller | FullStack Web Developer</title>
 </head>
 <body>
-  <header class="header vh-100 text-center position-relative">
+  <header class="header  text-center position-relative">
     <div class="text-container position-relative d-flex flex-column justify-content-center align-items-center h-100">
       <h2 class="text-primary fw-bold text-uppercase">Resume</h2>
       <h1 id="typing-text" class="display-1 fw-bold text-white mt-4 "></h1>
@@ -71,20 +71,23 @@
       <div class="text-center">
         <h4 class="text-uppercase fw-bold text-primary">About Me</h4>
         <hr class="w-25 mx-auto" />
-        <h2 class="mb-4">Deixe-me apresentar</h2>
+        <!-- <h2 class="mb-4">Deixe-me apresentar</h2> -->
       </div>
       <div class="about-content d-flex gap-5 align-items-center h-100">
         <img src="images/eros_.jpg" alt="" class="about-img img-fluid rounded-circle" />
         <p class="lead">
-          Inovativo e com um mix único de tecnologias e conhecimento profundo das mesmas.
+          Com mais de 18 anos de experiência em tecnologia da informação, sou especializado em arquitetura e modelagem
+          de software, desenvolvimento e integração de sistemas, além de automação e infraestrutura como código.
 
-          Desenvolvedor de software com mais de uma década de sucesso verificável liderando times e entregando soluções
-          tecnológicas tanto de Back End quanto de Front End (full stack developer).
-
-          Conhecimento amplo em plataformas de desenvolvimento, arquitetura empresarial, cloud services e web-based
-          applications.
-          Inovativo com boa mistura de alto noção tecnológica e profundo conhecimento técnico.
+          Possuo expertise em servidores de aplicação, testes automatizados, bancos de dados relacionais e não
+          relacionais, computação em nuvem (AWS e Azure) e práticas de DevOps, incluindo CI/CD. Além disso, atuo na
+          liderança de equipes de desenvolvimento, promovendo a cultura ágil e garantindo a entrega de soluções
+          escaláveis e eficientes.
         </p>
+      </div>
+      <div class="text-center  mt-5">
+        <h4>Software Engineer | Fullstack|Developer | Backend
+          Developer | Spring | SpringBoot | Angular | Java|Rest | Docker | Mongodb | Redis | Oracle |Angular</h4>
       </div>
     </div>
   </section>
@@ -732,7 +735,7 @@
 
           <h3 class="fs-3">7comm</h3>
           <hr class="w-25 mx-auto" />
-          <span class="fw-bold  fst-italic text-primary">Nov. 2021 – Apr. 2024</span>
+          <span class="fw-bold  fst-italic text-primary">Nov. 2021 – Aug. 2024</span>
           <h5>Engenheiro/Tech Leader/FullStack</h5>
           <p class="fs-8">
             Desenho & Arquitetura de projetos.
